--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
             </div>
         </section>
 
+        <div class="warning">
+            <div>
+                <i class="ph ph-warning-circle ph-fill"></i>
+                <span>O item foi removido da Lista</span>
+            </div>
+
+            <button>
+                <i class="ph ph-x"></i>
+            </button>
+        </div>
     </main>
 </body>
 </html>
