--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span>O item foi removido da Lista</span>
             </div>
 
-            <button>
+            <button onclick="addHideWarningClass()">
                 <i class="ph ph-x"></i>
             </button>
         </div>
